--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@ At a glance its set of python scripts for collecting data localy from phisical s
 <ul>
 <li>rasberry pi model B with raspian</li>
 <li>digital eviroment sensor like DS18B20 (temp) or DHT11 (humidity)</li></ul>
-
-2x resistor 4k7
-protoboard + small cables
-working instalation of munin software on external server
-working cgminer for example on antminer.</p>
+<li>2x resistor 4k7</li>
+<li>protoboard + small cables</li>
+<li>working instalation of munin software on external server</li>
+<li>working cgminer for example on antminer.</li></ul></p>
 
       </section>
       <footer>
