screenshots from munin

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ At a glance its set of python scripts for collecting data localy from phisical s
 <p>To monitor temperature and hashrate of your bitcoin mine with digital horizont on your own you need:
 <ul>
 <li>rasberry pi model B with raspian</li>
-<li>digital eviroment sensor like DS18B20 (temp) or DHT11 (humidity)</li></ul>
+<li>digital eviroment sensor like DS18B20 (temp) or DHT11 (humidity)</li>
 <li>2x resistor 4k7</li>
 <li>protoboard + small cables</li>
 <li>working instalation of munin software on external server</li>
