adding screenshots to html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
 <p>Digital horizon is software for monitoring data from environment: temperature, humidity or light. It also can monitor hashrate or performance of mining hardware. It is intedned to be installed on rasberry pi as a collection node and linux server for running miunin software.<br>
 At a glance its set of python scripts for collecting data localy from phisical sensors or bitcoin miners running cgminer and pushing it into munin hosted on external server.</p>
 
+
+<h3>
+<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Screenshots</h3>
+<img scr="/images/cgminer_hwerrors-week.png"><br>
+<img scr="/images/cgminer_temperature-week.png"><br>
+<img scr="/images/environmental-week.png"><br>
+
+
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Instalation</h3>
 
