--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@ At a glance its set of python scripts for collecting data localy from phisical s
 
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Screenshots</h3>
-<img scr="images/cgminer_hwerrors-week.png"><br>
-<img scr="/images/cgminer_temperature-week.png"><br>
-<img scr="/images/environmental-week.png"><br>
+Number of hardware errors, notice change in last hours<br>
+<img scr="http://jezjestem.github.io/digitalhoryzont/images/cgminer_hwerrors-week.png"><br>
+Temperature of mining hardware from internal sensor, directly coreleted with change in temperature<br>
+<img scr="http://jezjestem.github.io/digitalhoryzont/images/cgminer_temperature-week.png"><br>
+Temperature from eviroment measured by external sensors<br>
+<img scr="http://jezjestem.github.io/digitalhoryzont/images/environmental-week.png"><br>
 
 
 <h3>
