moving into wiki

--- a/index.html
+++ b/index.html
@@ -33,31 +33,8 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Digital horizont might help you mine bitcoins</h3>
 
-<p>Digital horizon is software for monitoring data from environment: temperature, humidity or light. It also can monitor hashrate or performance of mining hardware. It is intedned to be installed on rasberry pi as a collection node and linux server for running miunin software.<br>
-At a glance its set of python scripts for collecting data localy from phisical sensors or bitcoin miners running cgminer and pushing it into munin hosted on external server.</p>
-
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Screenshots</h3>
-Number of hardware errors, notice change in last hours<br>
-<img scr="http://jezjestem.github.io/digitalhoryzont/images/cgminer_hwerrors-week.png"><br>
-Temperature of mining hardware from internal sensor, directly coreleted with change in temperature<br>
-<img scr="http://jezjestem.github.io/digitalhoryzont/images/cgminer_temperature-week.png"><br>
-Temperature from eviroment measured by external sensors<br>
-<img scr="http://jezjestem.github.io/digitalhoryzont/images/environmental-week.png"><br>
-
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Instalation</h3>
-
-<p>To monitor temperature and hashrate of your bitcoin mine with digital horizont on your own you need:
-<ul>
-<li>rasberry pi model B with raspian</li>
-<li>digital eviroment sensor like DS18B20 (temp) or DHT11 (humidity)</li>
-<li>2x resistor 4k7</li>
-<li>protoboard + small cables</li>
-<li>working instalation of munin software on external server</li>
-<li>working cgminer for example on antminer.</li></ul></p>
+Documentation is on <a href="https://github.com/jezjestem/digitalhoryzont/wiki/">wiki</a><br>
+All is GNU for free
 
       </section>
       <footer>
