--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Digital horyzont</h1>
-        <p class="header">Internet of things for your bitcoin mine</p>
+        <p class="header">Internet of things for your bitcoin mine dzyn</p>
 
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/jezjestem/digitalhoryzont/zipball/master">Download ZIP</a></li>
