fixed menu and added powered by vim button

--- a/index.html
+++ b/index.html
@@ -17,30 +17,28 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Digital horyzont</h1>
-        <p class="header">Internet of things for your bitcoin mine dzyn</p>
+        <p class="header">Internet of things for your bitcoin mine</p>
 
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/jezjestem/digitalhoryzont/zipball/master">Download ZIP</a></li>
           <li class="download"><a class="buttons" href="https://github.com/jezjestem/digitalhoryzont/tarball/master">Download TAR</a></li>
           <li><a class="buttons github" href="https://github.com/jezjestem/digitalhoryzont">View On GitHub</a></li>
-	  <li><a href="https://github.com/jezjestem/digitalhoryzont/wiki/">wiki</a><br></li>
+	  <li><a href="https://github.com/jezjestem/digitalhoryzont/wiki/">Documentation</a><br></li>
+	  <li></li>
         </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/jezjestem">jezjestem</a></p>
-
 
       </header>
       <section>
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Digital horizont can help you mine bitcoins</h3>
 
-Documentation is available on  <a href="https://github.com/jezjestem/digitalhoryzont/wiki/">wiki</a><br></li>
+Detailed documentation is available on  <a href="https://github.com/jezjestem/digitalhoryzont/wiki/">wiki</a><br></li>
 
 All is GNU/BSD licenced for free for everyone!
 
       </section>
       <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> </small></p>
+	      <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> <img src="./vim-powered.gif" alt="powered by vim" /></small></p>
 
       </footer>
     </div>
